tests/error/modifier_errors/flag_branch1.err
Error: Invalid expression in dagger (at $FILE:7:8)
  | 
5 | @guppy(dagger=True)
6 | def test() -> None:
7 |         if 2 > 46:
  |         ^^^^^^^^^^
8 |             pass
  | ^^^^^^^^^^^^^^^^ Branch found in a dagger context

Help: The function test is declared with the unitary flag: `dagger=True`. Thus
dagger constraints apply to its body.

Guppy compilation failed due to 1 previous error
